2026/kubernetes/gateway-api/http-header-modifier.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: header-http-echo
spec:
  parentRefs:
  - name: acme-gw
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /add-a-request-header
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: my-header-name
          value: my-header-value
        set:
        - name: my-header-name
          value: my-new-header-value
        remove: ["x-request-id"]
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: x-header-add-1
          value: header-add-1
    backendRefs:
    - name: echo
      port: 8080
