2026/kubernetes/gateway-api/path-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-filter-redirect
spec:
  hostnames:
  - redirect.examples
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /cayenne
    filters:
    - type: RequestRedirect
      requestRedirect:
        path:
          type: ReplaceFullPath
          replaceFullPath: /paprika
        statusCode: 302
